@@ -4,6 +4,8 @@ Changes in @NEW@:
       children were installed has been fixed.  This ensures this if a 
       an update is partially completed, it can be restarted from where
       it left off.
+    * A bug in python dependencies that sometimes resulted in a plain 
+      python: __init__ dependency has been fixed.
 
 Changes in 0.97.1:
   o Bugfixes
